@@ -6,7 +6,8 @@ New features:
 -
 Bug fixes:
 ~~~~~~~~~~
--
+- DateTime widget: a default value (current date) was presented in view mode if
+  widget was required.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Removed dumb LOGs that fill the logs with binary data.
